# file-migration

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/file_migration/: __init__.py  cli.py  composition.py  logging_utils.py
src/file_migration/client/: __init__.py  google_drive_client.py  google_oauth.py  google_photos_client.py  open_drive_client.py
src/file_migration/config/: job_config.py  loader.py  validator.py
src/file_migration/context/: migration_item.py  migration_stage.py
src/file_migration/data_accessors/: db_session_factory.py  migration_state_accessor.py  source_accessor.py  target_accessor.py
src/file_migration/data_accessors/models/: migration_state_record.py
src/file_migration/downloader/: downloader.py  opendrive_downloader.py
src/file_migration/flow/: delete_flow.py  export_flow.py
src/file_migration/migration/: delete_migration.py  export_migration.py  migration_runner.py
src/file_migration/uploader/: google_drive_uploader.py  google_photos_uploader.py  noop_uploader.py  uploader.py
tests/: test_config_validation.py  test_export_delete_flow.py  test_google_oauth.py  test_google_uploaders.py  test_logging_utils.py  test_open_drive_client.py  test_opendrive_downloader.py
